--- a/style.css
+++ b/style.css
@@ -35,27 +35,26 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex-shrink: 1;
     width: 300px;
     height: auto;
     padding: 16px;
 }
 
-#clearAll {
+button {
     border: none;
     border-radius: 8px;
     padding: 9px;
-    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 110px;
+    margin-right: 110px;
     background-color: black;
     color: #eee;
 }
 
-#clearAll:active {
-    border: none;
-    border-radius: 8px;
-    padding: 8px;
-    margin: auto;
-    background-color: black;
-    color: #eee;
+button:active {
+    scale: 0.98;
 }
 
 
@@ -64,5 +63,5 @@ body {
 }
 
 .filler {
-    margin: auto;
+    margin: 1px;
 }
